# building-llm

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yaml  evaluate.py  pyproject.toml  requirements.txt  train.py
src/: __init__.py  main.py  profile_attention.py
src/components/: .multihead_attention.py.swp  __init__.py  feed_forward_network.py  flash_multihead_attention.py  gelu.py  gpt_model.py  hybrid_flash_multihead_attention.py  layer_norm.py  multihead_attention.py  test_components.py  transformer_block.py
src/configs/: gpt2_small.yaml  training_config.yaml
src/math_lib/: matmul.py
src/tokenization/: __init__.py  text_segment.py  token_merges.py  token_pair.py  token_pairs.py  tokenizer.py  vocabulary.py
src/training/: __init__.py  dataset.py  trainer.py
